# specwrite-mcp

./: .gitignore  CLI.md  INTEGRATION_GUIDE.md  README.md  TEMPLATES.md  USAGE.md  claude-desktop-config.json  healthcheck_api_spec.md  main.py  pyproject.toml
specwrite_mcp/: __init__.py  main.py
specwrite_mcp/core/: __init__.py  server.py
specwrite_mcp/handlers/: __init__.py  tool_handlers.py
specwrite_mcp/state/: __init__.py  project_state.py
specwrite_mcp/tools/: __init__.py  gherkin_parser.py  role_manager.py
specwrite_mcp/utils/: template_manager.py
specwrite_mcp/validation/: __init__.py  validation_manager.py
templates/: architect.yml  developer.yml  general.yml  product_manager.yml  tester.yml
tests/: __init__.py  test_comprehensive.py  test_server.py
